import { describe, it, expect } from "@jest/globals";
import {
  MockedWebClient,
  MockWebClient,
} from "@slack-wrench/jest-mock-web-client";
import dotenv from "dotenv";
import * as admin from "firebase-admin";
import functionsTest from "firebase-functions-test";
import { CONFIG, postSlackEvent, rotations } from "./test-helper";

dotenv.config({ path: `${__dirname}/../../.env` });
const { TEST_PROJECT_ID } = process.env;
if (!TEST_PROJECT_ID) {
  throw new Error("Environment variable TEST_PROJECT_ID not set.");
}

const test = functionsTest(
  {
    projectId: `${TEST_PROJECT_ID}`,
    databaseURL: `https://${TEST_PROJECT_ID}.firebaseio.com`,
    storageBucket: `${TEST_PROJECT_ID}.appspot.com`,
  },
  `${__dirname}/../../serviceAccountKey.json`
);
test.mockConfig(CONFIG);

import { slack, cron } from "./index";

describe("functions", () => {
  afterAll(() => {
    test.cleanup();
  });

  // Mock Slack API client
  let client: MockWebClient;
  beforeEach(async () => {
    client = MockedWebClient.mock.instances[0];
  });
  afterEach(async () => {
    client.chat.postMessage.mockClear();
  });

  // Firestore
  const rotationsRef = admin.firestore().collection("rotations");
  beforeEach(async () => {
    // Prepare rotations in Firestore
    await Promise.all(
      rotations.map((rotation) => rotationsRef.doc(rotation.id).set(rotation))
    );
  });
  afterEach(async () => {
    // Delete all rotations from Firestore
    const snapshot = await rotationsRef.get();
    await Promise.all(snapshot.docs.map((doc) => doc.ref.delete()));
  });

  describe("slack", () => {
    describe("/rota command", () => {
      it("opens SettingModal", async () => {
        const res = await postSlackEvent(slack, {
          command: "/rota",
          text: "foobar",
          channel_id: "channel-id",
          trigger_id: "trigger-id",
          // ...more unused parameters
        });
        expect(res.body).toEqual({}); // ack
        expect(client.views.open.mock.calls).toMatchSnapshot();

        expect(
          (await rotationsRef.get()).docs.map((doc) => doc.data())
        ).toEqual(rotations);
      });
    });

    describe("submit from SettingModal", () => {
      it("posts SettingSuccessMessage and creates a rotation on Firestore", async () => {
        Date.now = jest.fn(() => 1597200000000);

        const res = await postSlackEvent(slack, {
          payload: JSON.stringify({
            type: "view_submission",
            team: { id: "team-id", domain: "team-domain" },
            user: {
              id: "user-id",
              // ...snip
            },
            view: {
              type: "modal",
              private_metadata: '{"channel":"channel-id"}',
              callback_id: "submit_callback",
              state: {
                values: {
                  hour: {
                    hour: {
                      type: "static_select",
                      selected_option: {
                        text: {
                          type: "plain_text",
                          text: "23時",
                          emoji: true,
                        },
                        value: "23",
                      },
                    },
                  },
                  minute: {
                    minute: {
                      type: "static_select",
                      selected_option: {
                        text: {
                          type: "plain_text",
                          text: "45分",
                          emoji: true,
                        },
                        value: "45",
                      },
                    },
                  },
                  members: {
                    members: {
                      type: "multi_users_select",
                      selected_users: ["user-a", "user-b", "user-c"],
                    },
                  },
                  message: {
                    message: {
                      type: "plain_text_input",
                      value: "てすてす\n\n*テスト*です",
                    },
                  },
                  days: {
                    days: {
                      type: "multi_static_select",
                      selected_options: [
                        {
                          text: {
                            type: "plain_text",
                            text: "月曜",
                            emoji: true,
                          },
                          value: "1",
                        },
                        {
                          text: {
                            type: "plain_text",
                            text: "水曜",
                            emoji: true,
                          },
                          value: "3",
                        },
                        {
                          text: {
                            type: "plain_text",
                            text: "金曜",
                            emoji: true,
                          },
                          value: "5",
                        },
                      ],
                    },
                  },
                },
              },
              // ...snip
            },
            // ...snip
          }),
        });
        expect(res.body).toEqual({}); // ack
        expect(client.chat.postMessage.mock.calls).toMatchSnapshot();

        expect(
          (await rotationsRef.get()).docs.map((doc) => doc.data())
        ).toEqual([
          {
            id: "1597200000000",
            channel: "channel-id",
            members: ["user-a", "user-b", "user-c"],
            message: "てすてす\n\n*テスト*です",
            onDuty: "user-a",
            schedule: {
              days: [1, 3, 5],
              hour: 23,
              minute: 45,
            },
          },
          ...rotations,
        ]);
      });
    });
  });

  describe("cron", () => {
    const wrappedCron = test.wrap(cron);

    it("posts matched rotations and updates onDuty fields of them", async () => {
      await wrappedCron({
        timestamp: "2020-08-08T22:33:44.000Z", // Sun, 09 Aug 2020 07:33:44 JST
      });
      expect(client.chat.postMessage.mock.calls).toMatchSnapshot();
      expect((await rotationsRef.get()).docs.map((doc) => doc.data())).toEqual([
        { ...rotations[0], onDuty: "user-b" },
        { ...rotations[1], onDuty: "user-p" },
        rotations[2],
        rotations[3],
      ]);
    });

    it("does nothing when no rotation matched", async () => {
      await wrappedCron({
        timestamp: "2020-08-09T22:33:44.000Z", // Mon, 10 Aug 2020 07:33:44 JST
      });
      expect(client.chat.postMessage.mock.calls).toEqual([]);
      expect((await rotationsRef.get()).docs.map((doc) => doc.data())).toEqual(
        rotations
      );
    });
  });
});
